added new rules

--- a/Count_words.ipynb
+++ b/Count_words.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,8 +10,9 @@
     "import nltk.tokenize\n",
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.tokenize import RegexpTokenizer\n",
-    "import pandas as pdsq\n",
-    "import re"
+    "import pandas as pd\n",
+    "import re\n",
+    "import string"
    ]
   },
   {
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +126,7 @@
        "[('tomo', False), ('r', True), ('o', True), ('w', False)]"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +170,7 @@
        "['tomorow', 'tomoroow', 'tomorrow', 'tomorroow']"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,179 +213,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 97,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "noooo\tno\n",
-      "arrrgh\targh\n",
-      "grrreat\tgreat\n",
-      "waaay\tway\n",
-      "waaay\tway\n",
-      "arrrgh\targh\n",
-      "hmmm\thm\n",
-      "ooooh\toh\n",
-      "soooo\tso\n",
-      "hmmm\thm\n",
-      "sooo\tso\n",
-      "ohhh\toh\n",
-      "sweeeeet\tsweet\tsweet\n",
-      "sweeet\tsweet\tsweet\n",
-      "ewww\tew\n",
-      "sheeesh\tshesh\n",
-      "hmmm\thm\n",
-      "ooo\too\too\n",
-      "hmmm\thm\n",
-      "hmmm\thm\n",
-      "grrr\tgr\n",
-      "dammmo\tdamo\n",
-      "yesssssssss\tyes\n",
-      "riiiiight\tright\n",
-      "tommooooorrroooow\ttommorow\n",
-      "willll\twill\twill\n",
-      "takkkeeeeee\ttake\n",
-      "ussssss\tus\n",
-      "awaaaaaaay\taway\n",
-      "www.gamefags.com\tw.gamefags.com\n",
-      "oooooh\toh\n",
-      "www.fictionpress.net/~distantthunder\tw.fictionpress.net/~distantthunder\n",
-      "mmmm\tm\n",
-      "soooo\tso\n",
-      "loooong\tlong\n",
-      "soooo\tso\n",
-      "oooing\toing\n",
-      "helllllooo\thello\thello\n",
-      "soooo\tso\n",
-      "ummm\tum\n",
-      "daaaaaaaaamn\tdamn\n",
-      "herrre\there\n",
-      "reeeewiiiiinndddd\trewinnd\n",
-      "nooo\tno\n",
-      ".grrrr\t.gr\n",
-      "grrr\tgr\n",
-      "grrr\tgr\n",
-      "nooooo\tno\n",
-      "jacooooozi\tjacozi\n",
-      "asss\tass\tass\n",
-      "booo\tbo\n",
-      "weeeee\twee\twee\n",
-      "mmm\tm\n",
-      "yephmmm\tyephm\n",
-      "allllll\tall\tall\n",
-      "looooooooong\tlong\n",
-      "goooooooooood\tgood\tgood\n",
-      "riiiiight\tright\n",
-      "whhhhaaaat\twhat\n",
-      "yeeeahhh\tyeah\n",
-      "loooooong\tlong\n",
-      "hmmm\thm\n",
-      "yeeeah\tyeah\n",
-      "wellllll\twell\twell\n",
-      "www.livejournal.com/cielelric\tw.livejournal.com/cielelric\n",
-      "aaaagggghhhhhhhhhhh\tagh\n",
-      "tuuuu\ttu\n",
-      "peninggg\tpening\n",
-      "peninggg\tpening\n",
-      "lahhh..\tlah..\n",
-      "erghhh..sad\tergh..sad\n",
-      "laahhh..aussino\tlaah..aussino\n",
-      "cintaaaa..\tcinta..\n",
-      "lahhh..\tlah..\n",
-      "ergghhhh\terggh\n",
-      "blog..mmm..narik\tblog..m..narik\n",
-      "soooooooooo\tso\n",
-      "heeeeeeeeeeeeee\the\n",
-      "like..'harrraaammm\tlike..'haram\n",
-      "'..'sadissss..\t'..'sadis..\n",
-      "haaaaaa\tha\n",
-      "mmm\tm\n",
-      "laaa..\tla..\n",
-      "sayyy\tsay\n",
-      "mmm..\tm..\n",
-      "huuu..mintak\thu..mintak\n",
-      "aghhhh..\tagh..\n",
-      "wooo\twoo\twoo\n",
-      "xxx\tx\n",
-      "larrr\tlar\n",
-      "zzz\tz\n",
-      "aaahhh\tah\n",
-      "aaahhhhh\tah\n",
-      "usss\tus\n",
-      "haizzz\thaiz\n",
-      "heeee\the\n",
-      "heeeee\the\n",
-      "heeeee\the\n",
-      "haaaa\tha\n",
-      "haaaa\tha\n",
-      "haaaa\tha\n",
-      "zzzzzzzzzzzzzzzzzzzzz..\tz..\n",
-      "heee\the\n",
-      "hummmmiiinnnngg\thumingg\n",
-      "buzzzzbbrrrrgrrrbuzzzz\tbuzbbrgrbuz\n",
-      "buzzzzbbrrrrgrrrbuzzzz\tbuzbbrgrbuz\n",
-      "yaaaaaawwwnnnnnnn\tyawn\n",
-      "www.boortz.com\tw.boortz.com\n",
-      "ahhh\tah\n",
-      "hmmm\thm\n",
-      "eee-ahh-eee-ahh\te-ahh-e-ahh\n",
-      "hmmm\thm\n",
-      "mmm\tm\n",
-      "ssstoppp\tstop\n",
-      "laffff\tlaf\n",
-      "meeee\tme\n",
-      "eowwww\teow\n",
-      "whaaatt\twhatt\n",
-      "helll\thell\thell\n",
-      "ummm\tum\n",
-      "hmmm\thm\n",
-      "mreeeeeeeeeeeow\tmreow\n",
-      "hmmm\thm\n",
-      "jooooooooooeeeeeeeeeeeeeelllllllll\tjoel\n",
-      "heeeey\they\n",
-      "eveeereeebodeee\teverebode\n",
-      "reeeow\treow\n",
-      "arghhhh\targh\n",
-      "yahhhh\tyah\n",
-      "haizzzz\thaiz\n",
-      "laaaa\tla\n",
-      ".arghhhh\t.argh\n",
-      "opppss\topss\n",
-      "loveee\tlovee\tlovee\n",
-      "ooohhh\toh\n",
-      "cuuuttteeee\tcute\n",
-      "sooo\tso\n",
-      "sexxxyyyy\tsexy\n",
-      "sooo\tso\n",
-      "ooohhh\toh\n",
-      "cuuuttteeee\tcute\n",
-      "ueeeekk\tuekk\n",
-      "coooool\tcool\tcool\n",
-      "slipknot.blaaaaah\tslipknot.blah\n",
-      "hmmmm\thm\n",
-      "soooo\tso\n",
-      "happpend\thapend\n",
-      "hmmmmm\thm\n",
-      "whewwwwwww\twhew\n",
-      "dannnnnnnnng\tdang\n",
-      "welllll\twell\twell\n",
-      "toooooooo\ttoo\ttoo\n",
-      "tooo\ttoo\ttoo\n",
-      "jkiii/rave\tjki/rave\n",
-      "*grrr*\t*gr*\n"
+      "/\n",
+      "/\n",
+      "/\n",
+      "w/\n",
+      "w/\n",
+      "night/\n",
+      "cages/\n",
+      "masks/\n",
+      "goggles/\n",
+      "morning/\n",
+      "play/\n",
+      "passing/\n",
+      "sprinting/\n",
+      "throwing/\n",
+      "pillow/\n",
+      "beating/\n",
+      "him/\n",
+      "seat/\n",
+      "story/\n",
+      "father/\n",
+      "somebody/\n",
+      "nobody/\n",
+      "him/\n",
+      "destiny/\n",
+      "\\m/\n"
      ]
     }
    ],
    "source": [
     "out = open(\"test1000.txt\", \"w\")\n",
-    "for line in test[0].values:\n",
+    "for line in test[0].values[:]:\n",
     "    #read the file line by line\n",
     "    tokens = word_tokenize(line)\n",
     "    #tokenize the line using nltk.word_tokenize\n",
+    "    tokens2 = tokens.copy()\n",
     "    for i, token in enumerate(tokens):\n",
     "        # then iterate on it\n",
     "        # merge all the consecutive punctuation that has been splited into several tokens\n",
@@ -399,22 +271,79 @@
     "                tokens.pop(i+1)\n",
     "    # iterate on it again to aplly some normalization methods on each token            \n",
     "    for i, token in enumerate(tokens):\n",
-    "        if re.search(\"(a+h+){2,}|(h+a+){2,}|^aha$\", token): # normalizing the laughs into \"AHAHA\"\n",
+    "        if re.search(\"(a+h+){2,}|(h+a+){2,}|^aha$\", tokens[i]): # normalizing the laughs into \"AHAHA\"\n",
     "            tokens[i] = \"AHAH\"\n",
-    "        elif re.search(\"[a-z]\", token) and test_repetition(token):\n",
+    "        if re.search(\"([a-z]+\\.\\.[a-z]|\\.\\.[a-z]|[a-z]+\\.\\.)\", tokens[i]):\n",
+    "            splited =  re.split(\"\\.\\.\", tokens[i])\n",
+    "            tokens[i] = splited.pop(0)\n",
+    "            if not tokens[i]:\n",
+    "                tokens[i] = splited.pop(0)\n",
+    "            j = i+1\n",
+    "            while splited:\n",
+    "                tokens.insert(j, splited.pop(0))\n",
+    "                j += 1\n",
+    "        if re.search(\"[a-zA-Z0-9]\\.(com|net|org)(/.*)?\", tokens[i]):\n",
+    "            tokens[i] = 'urllink'\n",
+    "        if re.search(\"([a-z]{2,}\\.[a-z]{2,})+\", tokens[i]):\n",
+    "            splited = tokens[i].split('.')\n",
+    "            tokens[i] = splited.pop(0)\n",
+    "            j = i+1\n",
+    "            while splited:\n",
+    "                tokens.insert(j, splited.pop(0))\n",
+    "                j += 1\n",
+    "        if re.search(\"[a-z]\", token) and test_repetition(tokens[i]):\n",
     "            #cleaning the words that contains consecutive repetion of a letter 3 times or more\n",
-    "            print(token,end='\\t') #print the token that contains the repetition\n",
-    "            parsed = test_repetition(token)\n",
+    "            parsed = test_repetition(tokens[i])\n",
     "            words = create_word(parsed)\n",
     "            tokens[i] = words[0]\n",
     "            for word in words[1:]:\n",
     "                if word in dict_en:\n",
-    "                    print(word, end='\\t')\n",
     "                    tokens[i] = word\n",
     "                    break\n",
+    "        if re.search(\"/$\", tokens[i]):\n",
     "            print(tokens[i])\n",
     "    out.write(' '.join(tokens) + '\\n')\n",
     "out.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(0, 12), match='empty.hungry'>"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.search(\"([a-z]+\\.[a-z]+)+\", \"empty.hungry.feinin\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(14, 29), match='l.com/cielelric'>"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.search(\"[a-zA-Z0-9]\\.(com|net|org)(/.*)?\", \"www.livejournal.com/cielelric\")"
    ]
   },
   {
