normalizing the text done

--- a/Count_words.ipynb
+++ b/Count_words.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,50 +213,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 60,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/\n",
-      "/\n",
-      "/\n",
-      "w/\n",
-      "w/\n",
-      "night/\n",
-      "cages/\n",
-      "masks/\n",
-      "goggles/\n",
-      "morning/\n",
-      "play/\n",
-      "passing/\n",
-      "sprinting/\n",
-      "throwing/\n",
-      "pillow/\n",
-      "beating/\n",
-      "him/\n",
-      "seat/\n",
-      "story/\n",
-      "father/\n",
-      "somebody/\n",
-      "nobody/\n",
-      "him/\n",
-      "destiny/\n",
-      "\\m/\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "filtered = []\n",
     "out = open(\"test1000.txt\", \"w\")\n",
-    "for line in test[0].values[:]:\n",
+    "for l, line in enumerate(test[0].values):\n",
     "    #read the file line by line\n",
     "    tokens = word_tokenize(line)\n",
     "    #tokenize the line using nltk.word_tokenize\n",
-    "    tokens2 = tokens.copy()\n",
+    "\n",
     "    for i, token in enumerate(tokens):\n",
     "        # then iterate on it\n",
     "        # merge all the consecutive punctuation that has been splited into several tokens\n",
@@ -266,31 +235,66 @@
     "            t = 1\n",
     "            while i+t+1<len(tokens) and tokens[i+t+1] == token:\n",
     "                t+=1\n",
-    "            tokens[i] = ''.join([token for j in range(t+1)])\n",
+    "            tokens[i] = 3*token\n",
     "            for j in range(t):\n",
     "                tokens.pop(i+1)\n",
-    "    # iterate on it again to aplly some normalization methods on each token            \n",
-    "    for i, token in enumerate(tokens):\n",
+    "    # iterate on it again to aplly some normalization methods on each token\n",
+    "    i = 0\n",
+    "    while i < len(tokens):\n",
     "        if re.search(\"(a+h+){2,}|(h+a+){2,}|^aha$\", tokens[i]): # normalizing the laughs into \"AHAHA\"\n",
     "            tokens[i] = \"AHAH\"\n",
-    "        if re.search(\"([a-z]+\\.\\.[a-z]|\\.\\.[a-z]|[a-z]+\\.\\.)\", tokens[i]):\n",
-    "            splited =  re.split(\"\\.\\.\", tokens[i])\n",
-    "            tokens[i] = splited.pop(0)\n",
-    "            if not tokens[i]:\n",
-    "                tokens[i] = splited.pop(0)\n",
-    "            j = i+1\n",
-    "            while splited:\n",
-    "                tokens.insert(j, splited.pop(0))\n",
-    "                j += 1\n",
+    "            continue\n",
     "        if re.search(\"[a-zA-Z0-9]\\.(com|net|org)(/.*)?\", tokens[i]):\n",
     "            tokens[i] = 'urllink'\n",
-    "        if re.search(\"([a-z]{2,}\\.[a-z]{2,})+\", tokens[i]):\n",
-    "            splited = tokens[i].split('.')\n",
-    "            tokens[i] = splited.pop(0)\n",
+    "            continue\n",
+    "        if re.search(\"([a-z]+\\.+[a-z]+|\\.+[a-z]+|[a-z]+\\.+)\", tokens[i]):\n",
+    "            #all the tokens containing dots are splited around dots\n",
+    "            splited =  re.split(\"\\.\", tokens[i])\n",
+    "            tmp = splited.pop(0) \n",
+    "            while splited and not tmp:\n",
+    "                tmp = splited.pop(0)\n",
+    "            tokens[i] = tmp\n",
     "            j = i+1\n",
     "            while splited:\n",
-    "                tokens.insert(j, splited.pop(0))\n",
-    "                j += 1\n",
+    "                tmp = splited.pop(0)\n",
+    "                if tmp:\n",
+    "                    tokens.insert(j, tmp)\n",
+    "                    j += 1\n",
+    "            continue\n",
+    "        if re.search( \"([0-9]{2}\\/[0-9]{1,2}(\\/[0-9]{2,4})?|[0-9]{1,2}\\/[0-9]{2}(\\/[0-9]{2,4})?)\", tokens[i]):\n",
+    "            #We replace all the dates by 'DATE'\n",
+    "            tokens[i] = \"DATE\"\n",
+    "            continue\n",
+    "        if re.search(\"[0-9]{1,2}:[0-9]{1,2}(|am|pm)\", tokens[i]):\n",
+    "            tokens[i] = 'DATE'\n",
+    "        if re.search(\"([a-z]+\\/+[a-z]+|\\/+[a-z]+|[a-z]+\\/+)\", tokens[i]):\n",
+    "            #all the tokens containing '/' are splited around '/'\n",
+    "            splited =  re.split(\"\\/\", tokens[i])\n",
+    "            tmp = splited.pop(0) \n",
+    "            while splited and not tmp:\n",
+    "                tmp = splited.pop(0)\n",
+    "            tokens[i] = tmp\n",
+    "            j = i+1\n",
+    "            while splited:\n",
+    "                tmp = splited.pop(0)\n",
+    "                if tmp:\n",
+    "                    tokens.insert(j, tmp)\n",
+    "                    j += 1\n",
+    "            continue\n",
+    "        if re.search(\"([a-z]+\\*+[a-z]+|\\*+[a-z]+|[a-z]+\\*+)\", tokens[i]):\n",
+    "            #all the tokens containing '*' are splited around '*'\n",
+    "            splited =  re.split(\"\\*\", tokens[i])\n",
+    "            tmp = splited.pop(0) \n",
+    "            while splited and not tmp:\n",
+    "                tmp = splited.pop(0)\n",
+    "            tokens[i] = tmp\n",
+    "            j = i+1\n",
+    "            while splited:\n",
+    "                tmp = splited.pop(0)\n",
+    "                if tmp:\n",
+    "                    tokens.insert(j, tmp)\n",
+    "                    j += 1\n",
+    "            continue\n",
     "        if re.search(\"[a-z]\", token) and test_repetition(tokens[i]):\n",
     "            #cleaning the words that contains consecutive repetion of a letter 3 times or more\n",
     "            parsed = test_repetition(tokens[i])\n",
@@ -300,50 +304,41 @@
     "                if word in dict_en:\n",
     "                    tokens[i] = word\n",
     "                    break\n",
-    "        if re.search(\"/$\", tokens[i]):\n",
-    "            print(tokens[i])\n",
+    "            continue\n",
+    "        if re.search(\"^(\\-|\\`|<|>|\\*|@)+$\", tokens[i]):\n",
+    "            #removing token made of only '-'\n",
+    "            tokens.pop(i)\n",
+    "            continue\n",
+    "        if i>0 and re.search(\"^\\.+$\", tokens[i]) and re.search(\"^\\.+$\", tokens[i-1]): \n",
+    "            # if some consecutive token are only dots, then replace them by one token of '...'\n",
+    "            tokens[i-1] = \"...\"\n",
+    "            tokens.pop(i)\n",
+    "            i -= 1\n",
+    "            continue\n",
+    "        i += 1\n",
+    "    filtered.append(' '.join(tokens) )\n",
     "    out.write(' '.join(tokens) + '\\n')\n",
     "out.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<re.Match object; span=(0, 12), match='empty.hungry'>"
+       "['Helloo', '!', '!', '!']"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "re.search(\"([a-z]+\\.[a-z]+)+\", \"empty.hungry.feinin\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<re.Match object; span=(14, 29), match='l.com/cielelric'>"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "re.search(\"[a-zA-Z0-9]\\.(com|net|org)(/.*)?\", \"www.livejournal.com/cielelric\")"
+    "word_tokenize(\"Helloo!!!\")"
    ]
   },
   {
